Fix main overflow to work with iframe resize

--- a/app/static/src/scss/ml_datasets/variables.scss
+++ b/app/static/src/scss/ml_datasets/variables.scss
@@ -1,4 +1,4 @@
 $spacer: .7rem;
 $table-cell-padding: .3rem;
 $font-size-base: .8rem;
-$font-weight-normal: 300;
+$font-weight-normal: 400;
